Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124310

QT_DISTANCEFIELD_DEFAULT_BASEFONTSIZE=128 causes a QDistanceField crash

XMLWordPrintable

    • Linux/X11, Windows
    • b6f962c87 (dev), 985bc72f2 (6.8), 51eb2f2e5 (6.7), 41dd35a07 (tqtc/lts-6.5), 987146d42 (tqtc/lts-6.2), 970eb9d19 (tqtc/lts-5.15), 30a753944 (dev), 940ba11f8 (6.8), b6a161626 (6.7), 520117293 (tqtc/lts-6.5), 49540eb2a (tqtc/lts-6.2)

      How to reproduce the issue:

      • Run the attached reproducer with enabling the code in main() below :

        qputenv("QT_DISTANCEFIELD_DEFAULT_BASEFONTSIZE", "128"); 

      Then the application crashes. 
      The issue was reproduced with the value "86" or larger, while it is not reproduced with "85" or smaller.
      The user, reported this issue, needs it to be 128.

        1. untitled6.zip
          245 kB
          Hitoshi Ito
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            hitoshiito Hitoshi Ito
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: